--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       }
 
       </script>
+
+   <p>Two generated AI images using CHATGBT with the power of Api's</p>   
   
 
   <a href ="https://oaidalleapiprodscus.blob.core.windows.net/private/org-z1XFF3hHSg9k4bmBYeYk75Y8/user-Dxo8B6MHRdaipe3Em3gSuJGq/img-R6NinmdzVnEfrmQjMEgzrdxQ.png?st=2023-11-06T03%3A09%3A56Z&se=2023-11-06T05%3A09%3A56Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-11-05T05%3A01%3A31Z&ske=2023-11-06T05%3A01%3A31Z&sks=b&skv=2021-08-06&sig=0Do%2Buq9qhjssDmJ2F/NTFooKUakUaknk2Y0TwiHdvOI%3D">Flying Hamster</a>
